--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-particles": "^2.10.1",
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.11",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "tsparticles": "^2.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
